--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 		<title> Xander Nazon's First Site</title>
 	</head>
 	<body>
+
+		<div>
 		<h1> The life of Xander Nazon</h1>
 		<h2> An interview with myself.</h2>
+
+		<img src="Xander.jpg" alt="Photo of Xander">
+
+
 			<p> <b> Hello folks, My name is Xander Nazon and we have a special guest with us today. Coming all the way from the Land of Enchantment, Xander Nazon!</b></p>
 			<p> Hey Xander, great to be here today.</p>
 			<p><b> Pleasure to have you; so tell us a little about yourself Xander.</b></p>
@@ -14,7 +20,12 @@
 			<p><b> So what bring you all the way from New Mexico to New York then?</b></p>
 			<p> Well that's a funnt question actually. You see, I'm not exactly sure. I'm currently a first year at Lang for screen studies, but I'm not really sure if I want to continue to do that. I'm pretty passionate about doing actual art and being creative, so I might switch to Parsons for that. Who really knows though.<P>
 			<p><b> So it seems like you're really into painting and stuff?</b></p>
-			<P> Yeah, in all honestly you could call it my first passion. It's one of the first artistic mediums I used and I instant fell in love with it and that love has only grown over time. Nowadays, I've barely paint on canvas, alot of the time it's on clothes like pants or jackets. I really enjoy doing it and if I could I would love to turn it into a career. We will see how that goes go.
+			<P> Yeah, in all honestly you could call it my first passion. It's one of the first artistic mediums I used and I instant fell in love with it and that love has only grown over time. Nowadays, I've barely paint on canvas, alot of the time it's on clothes like pants or jackets. I really enjoy doing it and if I could I would love to turn it into a career. We will see how that goes go.</P>
+
+				<img src="jacket.jpg" alt="Design for jacket">
+
+				<img src="pants.jpg" alt="Example of pants I've painted">
+
 			<p><b> Interesting. So let's get into the real interesting part of the interview. What's something about you that most people wouldn't assume just by looking at you.</b></p>
 			<p> Hmmm.... Let me think, I feel like there are alot of things about people that most people wouldn't know just by looking at me. When I was younger I used to play hockey and I really loved it. If you look at me know I'm pretty scrawwny, so I'm sure you can guess why I had to quit. I mean have you seen some of the guys who play that game, they're football players on ice. I'm also really into computer games. For the last few years me and my friends have really been into this game called CounterStrike. We're not the best, but we have a fun time when we played together.</p>
 			<p><b> What's your favrite color?</b></p>
@@ -27,6 +38,23 @@
 			<p> Are you joking me? Do you know how hard that question is; I've tried so many dishes in my life. I used to love chicken paremean, but I could probably eat pizza or curry every day for the rest of my life and be perfectly happy. I also really love frnch fries, they're great as a side or just on there own.</p>
 			<p><b>What do you think inspires you the most?</b></p>
 			<p> I think I'm really motivated by people who have already made it. I see like my idols doing all these great thing and I feel just filled with creative energy. I want to try an be like them and that pushes me to want to do more.
+
+			</div>
+
+			<div>
+
+				<h2>Social Medias</h2>
+
+				<a href="https://www.instagram.com/xanzdope/?hl=en" target="_blank"> Instagram</a>
+			<br>
+				<a href="https://twitter.com/XanzDope" target="_blank"> Twitter</a>
+			<br>
+				<a href="https://open.spotify.com/user/zhockdaking?si=RjFRVy7kRnS8j6Y9hTWGQw" target="_blank"> Spotify</a>
+
+			</div>
+
+
+
 
 
 </body>
