--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<h1> The life of Xander Nazon</h1>
 		<h2> An interview with myself.</h2>
 
-		<img src="Xander.jpg" alt="Photo of Xander">
+		<img src="xander.jpg" alt="Photo of Xander">
 
 
 			<p class="interview"> <b> Hello folks, My name is Xander Nazon and we have a special guest with us today. Coming all the way from the Land of Enchantment, Xander Nazon!</b></p>
