--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="xanderstyle.css">
 		<style type="text/css">
 			p.interview {
-				color: #ff3300
+				color: #9400d3
 			}
 		</style>
 
@@ -31,7 +31,7 @@
 			<p class="interview"><b> So it seems like you're really into painting and stuff?</b></p>
 			<P> Yeah, in all honestly you could call it my first passion. It's one of the first artistic mediums I used and I instant fell in love with it and that love has only grown over time. Nowadays, I've barely paint on canvas, alot of the time it's on clothes like pants or jackets. I really enjoy doing it and if I could I would love to turn it into a career. We will see how that goes go.</P>
 
-				<img src="jacket.jpg" alt="Design for jacket">
+				<img id="jacket" src="jacket.jpg" alt="Design for jacket">
 
 				<img src="pants.jpg" alt="Example of pants I've painted">
 
@@ -54,7 +54,7 @@
 
 			<div>
 
-				<h2>Social Medias</h2>
+				<h2 id="medias">Social Medias</h2>
 
 				<a href="https://www.instagram.com/xanzdope/?hl=en" target="_blank"> Instagram</a>
 			<br>
